--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
+      
+    </style>
     <title>Explore</title>
   </head>
-  <body></body>
+  <body>
+    <div class="explore">Explore</div>
+  </body>
 </html>
