--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div class="explore">Explore</div>
+    <button class="more-details"><img src="img/Plus.svg" alt="Plus">  More details</button>
   </body>
 </html>
