Facebook and instagram buttons

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <body>
     <div class="explore">Explore</div>
     <button class="more-details"><img src="img/Plus.svg" alt="Plus">  More details</button>
+    <button class="facebook"><img src="img/Facebook.svg" alt="Facebook"></button>
+    <button class="instagram"><img src="img/Instagram.svg" alt="Instagram"></button>
+
   </body>
 </html>
