--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <title>Explore</title>
   </head>
   <body>
+    <!-- Text overlay -->
     <div class="explore">Explore</div>
-    <button class="more-details"><img src="img/Plus.svg" alt="Plus">  More details</button>
+
+    <!-- More details button -->
+    <button class="more-details" id="modal"><img src="img/Plus.svg" alt="Plus">  More details</button>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+    <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>More details</p>
+      </div>
+    </div>
+
+    <!-- Facebook and Instagram buttons -->
     <button class="facebook"><img src="img/Facebook.svg" alt="Facebook"></button>
     <button class="instagram"><img src="img/Instagram.svg" alt="Instagram"></button>
 
