Modal js created and working on styling

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <div class="explore">Explore</div>
 
     <!-- More details button -->
-    <button class="more-details" id="modal"><img src="img/Plus.svg" alt="Plus">  More details</button>
+    <button class="more-details" id="modal-btn"><img src="img/Plus.svg" alt="Plus">  More details</button>
 
     <!-- Modal -->
     <div id="modal" class="modal">
     <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>More details</p>
+        <h1>Explore</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus voluptatibus temporibus unde officiis voluptas velit sint, eos recusandae ut alias harum quasi inventore rem, iure cupiditate, vitae pariatur! Modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eius pariatur eum animi velit nostrum, nesciunt itaque rerum enim accusantium eos, dolorem, deserunt praesentium debitis distinctio consectetur deleniti repellendus voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis, eveniet sapiente eum consequatur fugiat doloribus odio ratione enim recusandae laudantium sequi repellat esse facere nisi iusto accusantium nostrum reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, doloribus numquam maiores veniam, cumque pariatur unde magni non in quas odit, voluptatibus sint commodi eveniet voluptate nesciunt quia ex? Recusandae?</p>
       </div>
     </div>
 
@@ -28,5 +29,6 @@
     <button class="facebook"><img src="img/Facebook.svg" alt="Facebook"></button>
     <button class="instagram"><img src="img/Instagram.svg" alt="Instagram"></button>
 
+    <script src = "modal.js"></script>
   </body>
 </html>
