--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1>Explore</h1>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus voluptatibus temporibus unde officiis voluptas velit sint, eos recusandae ut alias harum quasi inventore rem, iure cupiditate, vitae pariatur! Modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eius pariatur eum animi velit nostrum, nesciunt itaque rerum enim accusantium eos, dolorem, deserunt praesentium debitis distinctio consectetur deleniti repellendus voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis, eveniet sapiente eum consequatur fugiat doloribus odio ratione enim recusandae laudantium sequi repellat esse facere nisi iusto accusantium nostrum reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, doloribus numquam maiores veniam, cumque pariatur unde magni non in quas odit, voluptatibus sint commodi eveniet voluptate nesciunt quia ex? Recusandae?</p>
+        <button class="read-more-btn">READ MORE</button>
       </div>
     </div>
 
