--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <!-- Text overlay -->
-    <div class="explore">Explore</div>
+    <div class="explore" data-aos="fade-right">Explore</div>
 
     <!-- More details button -->
     <button class="more-details" id="modal-btn"><img src="img/Plus.svg" alt="Plus">  More details</button>
 
     <!-- Modal -->
-    <div id="modal" class="modal">
+    <div id="modal" class="modal" data-aos="fade-right"
+     data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
     <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
