Converted to scss

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/css/styles.css">
       
     </style>
     <title>Explore</title>
@@ -34,5 +34,6 @@
     <button class="instagram"><a href="https://www.instagram.com" target="_blank"><img src="img/Instagram.svg" alt="Instagram"></a></button>
 
     <script src = "modal.js"></script>
-  </body>
+    <script src="bower_components/aos/dist/aos.js"></script> 
+    </body>
 </html>
