--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/css/styles.css">
       
     </style>
@@ -13,18 +14,16 @@
     <div class="explore" data-aos="fade-right">Explore</div>
 
     <!-- More details button -->
-    <button class="more-details" id="modal-btn"><img src="img/Plus.svg" alt="Plus">  More details</button>
+    <button class="more-details" id="modal-btn" data-aos="fade-left"><img src="img/Plus.svg" alt="Plus">  More details</button>
 
     <!-- Modal -->
-    <div id="modal" class="modal" data-aos="fade-right"
-     data-aos-offset="300"
-     data-aos-easing="ease-in-sine">
+    <div id="modal" class="modal">
     <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
         <h1>Explore</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus voluptatibus temporibus unde officiis voluptas velit sint, eos recusandae ut alias harum quasi inventore rem, iure cupiditate, vitae pariatur! Modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eius pariatur eum animi velit nostrum, nesciunt itaque rerum enim accusantium eos, dolorem, deserunt praesentium debitis distinctio consectetur deleniti repellendus voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis, eveniet sapiente eum consequatur fugiat doloribus odio ratione enim recusandae laudantium sequi repellat esse facere nisi iusto accusantium nostrum reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, doloribus numquam maiores veniam, cumque pariatur unde magni non in quas odit, voluptatibus sint commodi eveniet voluptate nesciunt quia ex? Recusandae?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus voluptatibus temporibus unde officiis voluptas velit sint, eos recusandae ut alias harum quasi inventore rem, iure cupiditate, vitae pariatur! Modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eius pariatur eum animi velit nostrum, nesciunt itaque rerum enim accusantium eos, dolorem, deserunt praesentium debitis distinctio consectetur deleniti repellendus voluptatibus?</p>
         <button class="read-more-btn"><a href="#modal" target="_blank">READ MORE</a></button>
       </div>
     </div>
@@ -34,6 +33,12 @@
     <button class="instagram"><a href="https://www.instagram.com" target="_blank"><img src="img/Instagram.svg" alt="Instagram"></a></button>
 
     <script src = "modal.js"></script>
-    <script src="bower_components/aos/dist/aos.js"></script> 
-    </body>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 400,
+        duration: 1000
+      });
+    </script>    
+  </body>
 </html>
